@@ -80,6 +80,9 @@ BUGFIXES:
   ZOOKEEPER-2301: QuorumPeer does not listen on passed client IP in the constructor
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2299: NullPointerException in LocalPeerBean for ClientAddress
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
